# steam_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  steam_language.hpp
examples/: authorization.cpp  simple_logon.cpp
helpers/: bit_vector64.hpp  json.hpp
networking/: c_encrypted_connection.cpp  c_encrypted_connection.hpp  c_tcp_connection.cpp  c_tcp_connection.hpp  i_connection.hpp  net_structures.hpp  steam_language.hpp
networking/encryption/: c_encryption_with_hmac.cpp  c_encryption_with_hmac.hpp  i_encryption.hpp
steam/: cmc_client.cpp  cmc_client.hpp
steam/authentication/: c_auth_session.cpp  c_auth_session.hpp  c_credential_auth_session.cpp  c_credential_auth_session.hpp  c_steam_authentication.cpp  c_steam_authentication.hpp
steam/guard/: c_steam_confirmation.cpp  c_steam_confirmation.hpp  c_steam_guard_account.cpp  c_steam_guard_account.hpp  c_trade_manager.cpp  c_trade_manager.hpp  session_data.cpp  session_data.hpp
steam/steam_client/: c_steam_client.cpp  c_steam_client.hpp  c_steam_friends.cpp  c_steam_friends.hpp  c_steam_handler.cpp  c_steam_handler.hpp  c_steam_trading.cpp  c_steam_trading.hpp  c_steam_unified_messages.cpp  c_steam_unified_messages.hpp  c_steam_user.cpp  c_steam_user.hpp
steam/web_api/: c_steam_directory.cpp  c_steam_directory.hpp  c_web_api.cpp  c_web_api.hpp
structs/: clientmetrics.pb.cc  clientmetrics.pb.h  content_manifest.pb.cc  content_manifest.pb.h  contenthubs.pb.cc  contenthubs.pb.h  encrypted_app_ticket.pb.cc  encrypted_app_ticket.pb.h  enums.pb.cc  enums.pb.h  enums_clientserver.pb.cc  enums_clientserver.pb.h  enums_productinfo.pb.cc  enums_productinfo.pb.h  htmlmessages.pb.cc  htmlmessages.pb.h  offline_ticket.pb.cc  offline_ticket.pb.h  steamdatagram_messages_auth.pb.cc  steamdatagram_messages_auth.pb.h  steamdatagram_messages_sdr.pb.cc  steamdatagram_messages_sdr.pb.h  steammessages_accounthardware.steamclient.pb.cc  steammessages_accounthardware.steamclient.pb.h  steammessages_appoverview.pb.cc  steammessages_appoverview.pb.h  steammessages_auth.steamclient.pb.cc  steammessages_auth.steamclient.pb.h  steammessages_base.pb.cc  steammessages_base.pb.h  steammessages_broadcast.steamclient.pb.cc  steammessages_broadcast.steamclient.pb.h  steammessages_chat.steamclient.pb.cc  steammessages_chat.steamclient.pb.h  steammessages_client_objects.pb.cc  steammessages_client_objects.pb.h  steammessages_clientlanp2p.pb.cc  steammessages_clientlanp2p.pb.h  steammessages_clientmetrics.steamclient.pb.cc  steammessages_clientmetrics.steamclient.pb.h  (+138 more)
